added pro and cons paragraph

--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 
     <h1 class="page-heading">GIT WORKFLOW WORKSHOP</h1>
 
+    <section>
+      <h3>Pros of this exercise</h3>
+      <p>
+        The exercise is a good introduction into the workings of git, and the process of
+        workflow when working within a team using git.
+      </p>
+      <br/><br/>
+      <h3>Cons of this exercise</h3>
+      <p>
+        Could of contained details on the common practice of having a master branch,
+        and a devlopment branch. ensuring that the master branch or live version (almost)
+        never gets broken by accident.
+      </p>
+    </section>
+
 </body>
 
 </html>
